@@ -353,7 +353,14 @@
             </div>
           </div>
 
-          <button id="qr-submit" type="submit" data-theme="b">Search studies</button>
+          <fieldset class="ui-grid-a">
+	    <div class="ui-block-a">
+              <button id="qr-echo" data-theme="a">Test Echo</button>
+            </div>
+	    <div class="ui-block-b">
+              <button id="qr-submit" type="submit" data-theme="b">Search studies</button>
+            </div>
+	  </fieldset>
         </form>
       </div>
     </div>
